# bash-task

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
changelog.d/: 20230611_140642_pfmsoft.md  20230611_193919_pfmsoft_dev.md  20230615_052448_chad_dependencies_to_requirements.md  20230615_085608_pfmsoft_python_code_format.md  20230615_164804_pfmsoft_more_example_scripts.md  20230615_164901_pfmsoft_more_example_scripts.md  20230615_164934_pfmsoft_more_example_scripts.md
changelog.d/templates/: entry_title_template.md.j2  new_fragment.md.j2
dev-docs/: project-setup.md  workflow.md
scripts/: init-venv.sh  test-bench.sh
src/: task-template.sh
src/examples/: init-venv.sh  python-clean-artifacts.sh  python-clean-build.sh  python-clean-test.sh  python-format.sh  python-pypi-release.sh  python-pypi-test.sh  sphinx-clean.sh
