[project]
name = "bash-task"
description = "A skeleton bash script that mimics a CLI program."
requires-python = ">=3.10"
keywords = ["Python", "Bash"]
license = { file = "LICENSE" }
authors = [{ name = "Chad Lowe" }, { email = "pfmsoft.dev@gmail.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Bash",
]
dependencies = ["scriv[toml]", "pre-commit"]
version = "0.0.0"
[project.urls]
Documentation = "https://github.com/DonalChilde/bash-task#readme"
Issues = "https://github.com/DonalChilde/bash-task/issues"
Source = "https://github.com/DonalChilde/bash-task"


[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"
md_header_level = "2"
entry_title_template = "file: changelog.d/templates/entry_title_template.md.j2"
new_fragment_template = "file: changelog.d/templates/new_fragment.${config:format}.j2"
